# name: test_find[uvloop-None-200]
  <class 'list'> [
    <class 'dict'> {
      'action': 'cancel',
      'description': 'Allow cancellation of jobs.',
      'id': 'cancel_job',
      'name': 'Cancel Job',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of references.',
      'id': 'create_ref',
      'name': 'Create Ref',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of samples.',
      'id': 'create_sample',
      'name': 'Create Sample',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'modify',
      'description': 'Allow modification of HMMs.',
      'id': 'modify_hmm',
      'name': 'Modify HMM',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'modify',
      'description': 'Allow modification of subtractions.',
      'id': 'modify_subtraction',
      'name': 'Modify Subtraction',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'remove',
      'description': 'Allow removal of files.',
      'id': 'remove_file',
      'name': 'Remove File',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'remove',
      'description': 'Allow removal of jobs.',
      'id': 'remove_job',
      'name': 'Remove Job',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'upload',
      'description': 'Allow files to be uploaded.',
      'id': 'upload_file',
      'name': 'Upload File',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of users.',
      'id': 'create_user',
      'name': 'Create User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow users to be updated.',
      'id': 'update_user',
      'name': 'Update User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow deletion of users.',
      'id': 'delete_user',
      'name': 'Delete User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow user permissions to be updated.',
      'id': 'update_user_permissions',
      'name': 'Update User Permissions',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow settings to be updated.',
      'id': 'update_settings',
      'name': 'Update Settings',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of groups.',
      'id': 'create_group',
      'name': 'Create Group',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow groups to be updated.',
      'id': 'update_group',
      'name': 'Update Group',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow creation of groups',
      'id': 'delete_group',
      'name': 'Delete Group',
      'resource_type': 'app',
    },
  ]
---
# name: test_find[uvloop-app-200]
  <class 'list'> [
    <class 'dict'> {
      'action': 'cancel',
      'description': 'Allow cancellation of jobs.',
      'id': 'cancel_job',
      'name': 'Cancel Job',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of references.',
      'id': 'create_ref',
      'name': 'Create Ref',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of samples.',
      'id': 'create_sample',
      'name': 'Create Sample',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'modify',
      'description': 'Allow modification of HMMs.',
      'id': 'modify_hmm',
      'name': 'Modify HMM',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'modify',
      'description': 'Allow modification of subtractions.',
      'id': 'modify_subtraction',
      'name': 'Modify Subtraction',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'remove',
      'description': 'Allow removal of files.',
      'id': 'remove_file',
      'name': 'Remove File',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'remove',
      'description': 'Allow removal of jobs.',
      'id': 'remove_job',
      'name': 'Remove Job',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'upload',
      'description': 'Allow files to be uploaded.',
      'id': 'upload_file',
      'name': 'Upload File',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of users.',
      'id': 'create_user',
      'name': 'Create User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow users to be updated.',
      'id': 'update_user',
      'name': 'Update User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow deletion of users.',
      'id': 'delete_user',
      'name': 'Delete User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow user permissions to be updated.',
      'id': 'update_user_permissions',
      'name': 'Update User Permissions',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow settings to be updated.',
      'id': 'update_settings',
      'name': 'Update Settings',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of groups.',
      'id': 'create_group',
      'name': 'Create Group',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow groups to be updated.',
      'id': 'update_group',
      'name': 'Update Group',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow creation of groups',
      'id': 'delete_group',
      'name': 'Delete Group',
      'resource_type': 'app',
    },
  ]
---
# name: test_find[uvloop-invalid-400]
  <class 'list'> [
    <class 'dict'> {
      'ctx': <class 'dict'> {
        'enum_values': <class 'list'> [
          'app',
          'group',
        ],
      },
      'in': 'query string',
      'loc': <class 'list'> [
        'resource_type',
      ],
      'msg': "value is not a valid enumeration member; permitted: 'app', 'group'",
      'type': 'type_error.enum',
    },
  ]
---
# name: test_find[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of users.',
      'id': 'CREATE_USER',
      'name': 'Create User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow users to be updated.',
      'id': 'UPDATE_USER',
      'name': 'Update User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow deletion of users.',
      'id': 'DELETE_USER',
      'name': 'Delete User',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow settings to be updated.',
      'id': 'UPDATE_SETTINGS',
      'name': 'Update Settings',
      'resource_type': 'app',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of groups.',
      'id': 'CREATE_GROUP',
      'name': 'Create Group',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'update',
      'description': 'Allow groups to be updated.',
      'id': 'UPDATE_GROUP',
      'name': 'Update Group',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'modify',
      'description': 'Allow modification of HMMs.',
      'id': 'MODIFY_HMM',
      'name': 'Modify HMM',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'modify',
      'description': 'Allow modification of subtractions.',
      'id': 'MODIFY_SUBTRACTION',
      'name': 'Modify Subtraction',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow creation of groups',
      'id': 'DELETE_GROUP',
      'name': 'Delete Group',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow files to be uploaded.',
      'id': 'CREATE_UPLOAD',
      'name': 'Create Upload',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'delete',
      'description': 'Allow user-uploaded files to be deleted.',
      'id': 'DELETE_UPLOAD',
      'name': 'Delete Upload',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of references.',
      'id': 'CREATE_REFERENCE',
      'name': 'Create Reference',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'create',
      'description': 'Allow creation of samples.',
      'id': 'CREATE_SAMPLE',
      'name': 'Create Sample',
      'resource_type': 'space',
    },
    <class 'dict'> {
      'action': 'cancel',
      'description': 'Allow cancellation of jobs.',
      'id': 'CANCEL_JOB',
      'name': 'Cancel Job',
      'resource_type': 'space',
    },
  ]
---
